@@ -1,5 +1,6 @@
 X   0.3
-    * Add Shovel + Silk Touch II = harvest fallen snow
+    * Add Shovel + Silk Touch II = harvest fallen snow, fire
+    * Add Pickaxe + Silk Touch II = harvest ice
 
 2012-02-03  0.2
     * Add Bow + Sharpness = increase velocity
